Nouvelles fichiers à ignorer

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ Outils.py
 Exec_Modus.py
 CstesStruct.py
 README.md
+analyse_moyennes_colonnes.csv
+bdinter2012.sas7bdat
+bdinter2012.zip
+C_Modus.py
+brouillons.sas
+CstesModus.yml
