Beaucoup de temps depuis dernier commit

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@ CstesModus.yml
 Prepare_Data.py
 4 Etapes
 Other files
+Fichiers de validation 17_09_21
+gui_brouillons.py
+Paris.jpg
+Paris.txt
+Test.txt
+eiffel tower.jpg
+Copie de work
