--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ brouillons.sas
 CstesModus.yml
 Prepare_Data.py
 4 Etapes
-Other files
+Other_files
 Fichiers de validation 17_09_21
 gui_brouillons.py
 Paris.jpg
