--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ nbclient==0.5.4
 nbconvert==6.2.0
 nbformat==5.1.3
 nest-asyncio==1.5.1
-notebook==6.4.5
+notebook~=6.4.8
 numpy==1.21.1
 packaging==21.0
 pandas==1.3.1
@@ -78,3 +78,12 @@ traitlets==5.1.0
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==2.0.1
+
+streamlit~=1.5.0
+matplotlib~=3.5.1
+requests~=2.27.1
+dotmap~=1.3.26
+Pillow~=9.0.0
+seaborn~=0.11.2
+pyinstaller~=4.8
+datapane~=0.13.2
