Nouvelle fichiers sur .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,18 @@ Test.txt
 eiffel tower.jpg
 Copie de work
 output
+
+
+/Traitement/Dashboard_simple.py
+/Traitement/dashboard_streamlit.py
+/Traitement/Modus_Python-Modus_Python.html
+/Traitement/comparaison.html
+/Traitement/control_loop.py
+/Traitement/utility.spec
+/Traitement/report.html
+/Traitement/Quatres_Etapes.main.spec
+/Traitement/python-3.8.0-amd64.exe
+/Traitement/Pyinstaller log.txt
+/Traitement/Modus_python_entry.spec
+/Traitement/Modus_python_entry.py
+/Traitement/Indicateurs de Modus.ipynb
