Après retour au MODUS sans PL

--- a/Data/config_yml.yml
+++ b/Data/config_yml.yml
@@ -1,4 +1,4 @@
-nom_simul: Test_PL        # Nom de la simulation sur laquelle tu travaille actuellement.
+nom_simul: Teleworking_wt_22,5       # Nom de la simulation sur laquelle tu travaille actuellement.
 
 # 0. Caractéristiques du zonage
 cNbZone: 1289
